tests/ui/lint/snapshots/loop_runs_once_if_else_both_exit.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Loop runs at most once
   ╭─[test.lis:4:3]
 3 │   let flag = true
 4 │   loop {
   ·   ──┬─
   ·     ╰── the body always exits before looping back
 5 │     if flag {
   ╰────
  help: The body always exits on the first iteration, so the loop never repeats. Make the exit conditional, or remove the loop · code: [lint.loop_runs_once]
