tests/ui/lint/snapshots/loop_runs_once_loop_break.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Loop runs at most once
   ╭─[test.lis:3:3]
 2 │ fn main() {
 3 │   loop {
   ·   ──┬─
   ·     ╰── the body always exits before looping back
 4 │     let _ = 1
   ╰────
  help: The body always exits on the first iteration, so the loop never repeats. Make the exit conditional, or remove the loop · code: [lint.loop_runs_once]
