tests/ui/lint/snapshots/lost_cancel_cause_func_discarded.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Context leaking
   ╭─[test.lis:5:13]
 4 │ fn main() {
 5 │   let (ctx, _) = context.WithCancelCause(context.Background())
   ·             ┬
   ·             ╰── never called
 6 │   let _ = ctx
   ╰────
  help: Call this cancel function (usually `defer cancel()`) to release the context, or it leaks until the parent is canceled · code: [lint.lost_cancel]
