tests/ui/lint/snapshots/lost_cancel_whole_result_discarded.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Context leaking
   ╭─[test.lis:5:7]
 4 │ fn main() {
 5 │   let _ = context.WithCancel(context.Background())
   ·       ┬
   ·       ╰── never called
 6 │ }
   ╰────
  help: Call this cancel function (usually `defer cancel()`) to release the context, or it leaks until the parent is canceled · code: [lint.lost_cancel]
